Fix a background image resize bug on ios

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -119,16 +119,19 @@ nav.navbar-default {
 }
 
 /* home page */
-#home {
+#home:before {
     display: block;
+    position: fixed;
     font-weight: 300;
-    min-height: 100vh;
-    background: url(images/coffee-1276781_blur.jpg) no-repeat fixed;
+    width: 100%;
+    height: 100%;
+    background: url(images/coffee-1276781_blur.jpg) no-repeat top left;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
     left: 0;
+    z-index: -10;
 }
 
 .title-lines {
